WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25587
[Qt] Fix Qt build when ENABLE_DATABASE is turned off
https://bugs.webkit.org/show_bug.cgi?id=25587
Summary
[Qt] Fix Qt build when ENABLE_DATABASE is turned off
Laszlo Gombos
Reported
2009-05-06 09:10:27 PDT
This will ensure that the Qt build compiles all the way when ENABLE_DATABASE is turned off. This is a follow-up to some recent commits in this area: -
http://trac.webkit.org/changeset/43283
-
http://trac.webkit.org/changeset/43285
Attachments
Fix Qt build when ENABLE_DATABASE is turned off
(4.55 KB, patch)
2009-05-06 09:19 PDT
,
Laszlo Gombos
zecke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2009-05-06 09:19:41 PDT
Created
attachment 30052
[details]
Fix Qt build when ENABLE_DATABASE is turned off
Holger Freyther
Comment 2
2009-05-11 03:37:35 PDT
Patch looks good, I wonder how smart the compilers used are if you throw them a stub implementation in front of them... I would like to minimize the amount of #ifdef...
Holger Freyther
Comment 3
2009-05-11 09:23:40 PDT
Landed in
r43496
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug