2009-05-11  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Holger Freyther.

        Fix Qt build when ENABLE_DATABASE is turned off

        https://bugs.webkit.org/show_bug.cgi?id=25587

        * Api/qwebdatabase.cpp:
        (QWebDatabase::displayName):
        (QWebDatabase::expectedSize):
        (QWebDatabase::size):
        (QWebDatabase::fileName):
        (QWebDatabase::removeDatabase):
        * Api/qwebdatabase_p.h:
        * Api/qwebsecurityorigin.cpp:
        (QWebSecurityOrigin::allOrigins):
        (QWebSecurityOrigin::databases):

Canonical link: https://commits.webkit.org/35488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43496 268f45cc-cd09-0410-ab3c-d52691b4dbfc