WebKit/qt/Api/qwebdatabase.cpp
@@ -20,8 +20,6 @@
 #include "config.h"
 #include "qwebdatabase.h"
 
-#if ENABLE(DATABASE)
-
 #include "qwebdatabase_p.h"
 #include "qwebsecurityorigin.h"
 #include "qwebsecurityorigin_p.h"
@@ -72,8 +70,12 @@ QString QWebDatabase::name() const
 */
 QString QWebDatabase::displayName() const
 {
+#if ENABLE(DATABASE)
     DatabaseDetails details = DatabaseTracker::tracker().detailsForNameAndOrigin(d->name, d->origin.get());
     return details.displayName();
+#else
+    return QString();
+#endif
 }
 
 /*!
@@ -81,8 +83,12 @@ QString QWebDatabase::displayName() const
 */
 qint64 QWebDatabase::expectedSize() const
 {
+#if ENABLE(DATABASE)
     DatabaseDetails details = DatabaseTracker::tracker().detailsForNameAndOrigin(d->name, d->origin.get());
     return details.expectedUsage();
+#else
+    return 0;
+#endif
 }
 
 /*!
@@ -90,8 +96,12 @@ qint64 QWebDatabase::expectedSize() const
 */
 qint64 QWebDatabase::size() const
 {
+#if ENABLE(DATABASE)
     DatabaseDetails details = DatabaseTracker::tracker().detailsForNameAndOrigin(d->name, d->origin.get());
     return details.currentUsage();
+#else
+    return 0;
+#endif
 }
 
 /*!
@@ -121,7 +131,11 @@ QWebDatabase::QWebDatabase(QWebDatabasePrivate* priv)
 */
 QString QWebDatabase::fileName() const
 {
+#if ENABLE(DATABASE)
     return DatabaseTracker::tracker().fullPathForDatabase(d->origin.get(), d->name, false);
+#else
+    return QString();
+#endif
 }
 
 /*!
@@ -140,7 +154,9 @@ QWebSecurityOrigin QWebDatabase::origin() const
 */
 void QWebDatabase::removeDatabase(const QWebDatabase &db)
 {
+#if ENABLE(DATABASE)
     DatabaseTracker::tracker().deleteDatabase(db.d->origin.get(), db.d->name);
+#endif
 }
 
 /*!
@@ -150,4 +166,3 @@ QWebDatabase::~QWebDatabase()
 {
 }
 
-#endif
