WebKit/qt/Api/qwebdatabase_p.h
@@ -19,8 +19,6 @@
 #ifndef _WEBDATABASE_P_H_
 #define _WEBDATABASE_P_H_
 
-#if ENABLE(DATABASE)
-
 #include <QString>
 #include <QtCore/qshareddata.h>
 
@@ -35,8 +33,6 @@ public:
     WebCore::String name;
     WTF::RefPtr<WebCore::SecurityOrigin> origin;
 };
-
-#endif
 
 #endif
 
